src/objects/Apttus_Config2__AgreementPriceTier__c.object
<CustomObject>
    <description>Represents a single entry in an agreement price tier</description>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FlatPrice__c</fullName>
        <description>The flat price for the tier or period</description>
        <inlineHelpText>The flat price for the tier or period</inlineHelpText>
        <label>Flat Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The period end date</description>
        <inlineHelpText>The period end date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The period start date</description>
        <inlineHelpText>The period start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceRuleId__c</fullName>
        <description>ID of the associated rule</description>
        <inlineHelpText>ID of the associated rule</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>Apttus_Config2__AgreementPriceRule__c</referenceTo>
        <relationshipLabel>Agreement Price Tiers</relationshipLabel>
        <relationshipName>PriceTiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The tier entry sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierEndValue__c</fullName>
        <description>The tier end value</description>
        <inlineHelpText>The tier end value</inlineHelpText>
        <label>To</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierRate__c</fullName>
        <description>The rate for the tier or period</description>
        <inlineHelpText>The rate for the tier or period</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierStartValue__c</fullName>
        <description>The tier start value</description>
        <inlineHelpText>The tier start value</inlineHelpText>
        <label>From</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Agreement Price Tier</label>
    <nameField>
        <displayFormat>PT-{0000000000}</displayFormat>
        <label>Tier Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Price Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>